@@ -1,5 +1,5 @@
 AUX gitkraken.png 19197 BLAKE2B 2156f9c4c616888a14dd8cfbbeaf0b65285f311af60414a60770b5f5fe2fbeced42fefa83db9e364ba770d21d3f921850473b855a63020a779ce74167d5de7fb SHA512 5be7e2fcc2ae54139007cf6ff690eccc6a6c13132d3942f2446a24a7de2f1bfa9bfa43ec575677be15c5563e9d4b393fee86894b03730884b2e6d863d5dafc92
 DIST GitKraken-v7.4.1.tar.gz 112897612 BLAKE2B bd3b23478dfd1b0979ad3ca44fad0f98ac3f141cbeec97c5032cdbcbd0051998ae0887d7c8c726336bfbaaefb1e9f244186cda3a2b6517907f68e6014092bc15 SHA512 3d280fe721619002d5650861e582bddeb159b60ed0d1599c6de9735d45555afae7b1f655b5a2e2b9caad2c69d1f218fc5e95673d7d76e0e91ed495cabdd77eb4
-EBUILD gitkraken-bin-7.4.1.ebuild 1542 BLAKE2B 70e770a7b6df597d08faece2c409fb37dd5c90c8e9d716a99954ca2083b68e331109260aaf4ca9f8718d171d826e030407b2da5d1a2fac9dfbdd1f6f82a68c76 SHA512 c3f7c019bf4c3bb8e9f360c7d2f589c1d7a9b7902628f8a9746315ccc181284ca4ab7d4ff0ded817120c5c338d3dac136da784d349a996ee34711d18176a519a
-MISC ChangeLog 264 BLAKE2B 38f0c7400609a8da805e1f9d286c9349975a8ae9679f2421ba2ebd20e126256c9143a9979c74dd41b9b04ed72f2979ca267fd17ab031a50c9bedf49ab1dc8946 SHA512 a32827913739019f14d0db85b4eacf34e85536b14fe9883b0af9e17428567d079671c5cd505b420d65dd6ee3c554a1c5d34bb4562c3855e6444d5ee4a92307a4
-MISC metadata.xml 545 BLAKE2B 49c27b7fac275d95c54dad575ba45c40809bebb90c34a52922d6ff75c2bbf3882dc05d00e8951336983393b7546e41c2b22a42173684975778ba29741e7d94f4 SHA512 96ce7ee31e324c6419eb4a7c1ed9c1353f3d4a319295868194ba9e6f3bd0151b795662d1d311c30466dca0049fb55c39f8f0937d9f5590923856f3307ddb5f87
+EBUILD gitkraken-bin-7.4.1.ebuild 1423 BLAKE2B 3b741117a3d1ab7a33ab8f3f8db1a8273ff6006129f425a059cb6b67cba9c1ee97deb870beafc749f3db4f4acd7a823e7c9746c84b30f35aa8beb4c21c592241 SHA512 e716d365e05ac81f908aebb8966dbb53e5890dc50fe3268a43a9cf958ee349007c9e6272622ab8b1360a1b4d8e5760374505395e8a7b86a5686d9412ccaf1ff4
+MISC ChangeLog 314 BLAKE2B 6493b67df2cf3b783248cffa2c0142246ce31f149e0753ffbae707d47206d8994ff05820d6ac5565a360fe140a01d5ba6637b52003174f2e4efcba0d4b8a37dc SHA512 bd2e3ec9371f97746f62381f9ca3c29867329f55f2ba84825901737e8f4072cd000b855e2ab8aa1c2e46e0ef54927863383ad8a46c51d9bb199d5b848e77934e
+MISC metadata.xml 391 BLAKE2B 172b941bf5115698466a949a727db094f115230eb7b5d00df66c682c2cf1c87c72b665bb16715ca30d2a9bfea01757f4dd2bd7758789179da2928abd6405cfb6 SHA512 5b048f7cc8ec2a8a9dfda376bd6a2ff8f53cf8eb82dbbce3abab0840741911e76a6208443655795ba937b336ac64e2fdfcebf0cc424173869ebf46e2194a3f3c
